--- a/css/core.css
+++ b/css/core.css
@@ -1,4 +1,39 @@
 #pagecontent {
  margin-left : 50px;
- background-color: white;
+}
+
+.maintitle{
+  max-width: 960px;
+  margin: auto;
+  text-align: center;
+  font-size: calc(1.425rem + 1.5vw);
+  padding-top: 20px;
+}
+
+.col-sm{
+  text-align: center;
+}
+
+.col-sm:first-child{
+    border-right: 3px solid;
+}
+
+@include media-breakpoint-down(sm) {
+  .col-sm:first-child{
+      border-right: 3px solid;
+  }
+ }
+
+img{
+  width: 60%;
+  height: auto;
+  margin: auto;
+}
+
+p{
+  display: block;
+}
+
+.row{
+  margin-top: 30px;
 }
