--- a/css/core.css
+++ b/css/core.css
@@ -14,18 +14,29 @@
   text-align: center;
 }
 
+
+
 .col-sm:first-child{
     border-right: 3px solid;
 }
 
-@include media-breakpoint-down(sm) {
+@media (max-width: 576px) {
   .col-sm:first-child{
-      border-right: 3px solid;
+      border-right: none;
+      margin-bottom: 30px;
   }
- }
+}
+
+.titlecreate{
+  margin-top: 20px;
+}
+
+.titlesearch{
+  margin-top: 20px;
+}
 
 img{
-  width: 60%;
+  width: 50%;
   height: auto;
   margin: auto;
 }
