--- a/css/header.css
+++ b/css/header.css
@@ -1,18 +1,11 @@
 header{
-  background-color: #2B55FF;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  padding: 30px;
-  align-items: center;
+  background-color: #283F6D;
+
 }
 
-#mos_title{
-  font-size: 20px;
-  margin: 0;
-}
-
-#mos_logo{
-  width: 50px;
-  height: 50px;
+#mabel_logo{
+  width: 100px;
+  height: auto;
+  padding: 10px;
+  margin-left: 10%;
 }
