--- a/css/core.css
+++ b/css/core.css
@@ -47,3 +47,21 @@ p{
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.formcontainer{
+  margin: auto;
+  margin-top: 5%;
+  max-width: 400px;
+}
+
+.formcontainer h2{
+  margin-bottom: 20px;
+}
+
+.btn-primary, .btn-primary:visited {
+    background-color: #FF5185!important;
+}
+
+.btn-primary:hover, .btn-primary:active{
+  background-color: #FF0046!important;
+}
