--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,10 @@
 header{
   background-color: #283F6D;
-
 }
 
 #mabel_logo{
   width: 100px;
   height: auto;
   padding: 10px;
-  margin-left: 10%;
+  margin-left: 160px;
 }
