--- a/css/core.css
+++ b/css/core.css
@@ -74,11 +74,17 @@ p{
 }
 
 #createaccount{
-  padding-top: 20px!important;
-  font-size: 14px;
+  padding-top: 20px;
+  font-size: 16px;
   color: #283F6D;
+  text-align: center;
 }
 
+#forgotaccount{
+  margin-top: 5px;
+  font-size: 13px;
+  color: red;
+}
 .errormsg{
   color: red;
 }
