--- a/css/core.css
+++ b/css/core.css
@@ -41,6 +41,24 @@ button, button:active, button:hover, button:focus{
   outline: none;
 }
 
+li{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.blue{
+  color: blue!important;
+}
+
+.orange{
+  color : orange!important;
+}
+
+.red{
+  color: red!important;
+}
+
 /* -------------- pageacceuil ------------------*/
 .maintitle{
   font-family: 'Lobster', cursive;
@@ -137,7 +155,20 @@ button, button:active, button:hover, button:focus{
   width: 100%;
   max-width: 960px;
   margin: auto;
-  padding: 20px;
+  margin-top: 40px;
+	padding: 10px 20px 10px 20px;
+  background-color: #efefef;
+  border-radius: 20px;
+  box-shadow: 0 4px 2px -2px gray;
+}
+
+.containerboutique a, .containerboutique a:link, .containerboutique a:visited, .containerboutique a:hover, .containerboutique a:focus, .containerboutique a:active{
+    color: inherit;
+    text-decoration: none;
+}
+
+.containerboutique li{
+  margin-bottom: 10px;
 }
 
 .headercontainerboutique{
@@ -145,36 +176,61 @@ button, button:active, button:hover, button:focus{
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  height: 60px;
-  background-color: red;
+  flex-wrap: wrap;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .logoboutique{
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
+  margin-right : 10px;
 }
 
 .titreboutique{
-  font-size: 20px;
   margin: 0;
 }
 
 .boutiquestatuscontainer{
   border-radius: 20px;
-  justify-self: flex-end; /* Seul ce bloc sera aligné à la fin */
   background-color: green;
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  display: flex;
-  align-items: center;
+  padding: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
 }
 
 .boutiquestatus{
   color: white;
   text-align: center;
+  white-space: nowrap;
+  margin: 0;
 }
+
+.boutiquesactions{
+  text-align: right;
+}
+
+.emptyboutique{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 230px;
+}
+
+.emptyboutique img{
+  width: 100px;
+  height: 100px;
+  transition: 0.2s;
+
+}
+
+.emptyboutique img:hover{
+  width: 140px;
+  height: 140px;
+  transition: 0.2s;
+}
+
 
 /* ---------------------------- medias querys -------------------------- */
 
