--- a/css/core.css
+++ b/css/core.css
@@ -25,7 +25,7 @@ font-family: 'Quicksand', sans-serif; */
   color: red;
 }
 
-.btn, .btn:visited {
+/* .btn, .btn:visited {
   color: white;
   background-color: #FF5185;
 }
@@ -33,7 +33,7 @@ font-family: 'Quicksand', sans-serif; */
 .btn:hover, .btn:active{
     color: white;
     background-color: #FF0046;
-}
+} */
 
 button, button:active, button:hover, button:focus{
   border: none;
@@ -179,6 +179,10 @@ li{
   flex-wrap: wrap;
   align-items: center;
   margin-bottom: 10px;
+}
+
+.vuemyshops .modal-dialog{
+  margin-top: 150px;
 }
 
 .logoboutique{
