--- a/css/core.css
+++ b/css/core.css
@@ -8,7 +8,7 @@ font-family: 'Quicksand', sans-serif; */
 }
 
 .successmsg p{
-  color: green;
+  color: green!important;
 }
 
 .formcontainer{
@@ -124,8 +124,8 @@ li{
 }
 
 .ppcontainermyaccount img{
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -181,15 +181,32 @@ li{
   margin-bottom: 10px;
 }
 
+.containerimgboutique{
+  width: 70px;
+  height: 70px;
+  margin-right : 10px;
+  overflow: hidden;
+}
+.containerimgboutique label{
+  position: absolute;
+}
+
+.containerimgboutique input{
+  display: none;
+}
+
+
+.logoboutique{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .vuemyshops .modal-dialog{
   margin-top: 150px;
 }
 
-.logoboutique{
-  width: 60px;
-  height: 60px;
-  margin-right : 10px;
-}
 
 .titreboutique{
   margin: 0;
@@ -235,7 +252,6 @@ li{
   height: 140px;
   transition: 0.2s;
 }
-
 
 /* ---------------------------- medias querys -------------------------- */
 
