--- a/css/core.css
+++ b/css/core.css
@@ -59,6 +59,11 @@ li{
   color: red!important;
 }
 
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
+
 /* -------------- pageacceuil ------------------*/
 .maintitle{
   font-family: 'Lobster', cursive;
@@ -207,7 +212,6 @@ li{
   margin-top: 150px;
 }
 
-
 .titreboutique{
   margin: 0;
 }
@@ -244,7 +248,6 @@ li{
   width: 100px;
   height: 100px;
   transition: 0.2s;
-
 }
 
 .emptyboutique img:hover{
@@ -271,27 +274,94 @@ li{
   margin: 20px;
 }
 
+.aboutus{
+    padding-bottom: 50px;
+}
+
 .aboutus h1{
   text-align: center;
   font-size: 30px;
-  margin: 20px;
-}
-
-.containerimgaboutus{
-  width: 100%;
-  max-width: 400px;
+  padding: 20px;
 }
 
 .aboutusimg{
+  display:block;
+  margin: auto;
+  max-width: 350px;
   width: 100%;
+  height: auto;
+  vertical-align: middle;
+  border-radius: 3px;
+}
+
+.unarticle{
+  background-color: #E8E8E8;
+  border-radius: 20px;
+  margin: auto;
+  margin-bottom: 30px;
+  width: 200px;
+}
+
+.unarticle a, .unarticle a:link, .unarticle a:visited, .unarticle a:hover, .unarticle a:focus, .containerboutique a:active{
+    color: inherit;
+    text-decoration: none;
+}
+
+.unarticle h6{
+  margin-top: 6px;
+  text-align: center;
+  padding-bottom: 8px;
+  margin-bottom: 0;
+}
+
+.unarticle .imgcontainer{
+  width: 200px;
+  height: 200px;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.unarticle img{
+  width: 200px;
   height: auto;
 }
 
+.categorie h4{
+  margin-bottom: 20px;
+}
+
+.emptycontainerarticle{
+  display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 227px;
+}
+
+.emptycontainerarticle img{
+  width: 80px;
+  height: 80px;
+  transition: 0.2s;
+}
+
+.emptycontainerarticle img:hover{
+  width: 120px;
+  height: 120px;
+  transition: 0.2s;
+}
 /* ---------------------------- medias querys -------------------------- */
 
 @media (max-width: 576px) {
   .col-sm:first-child{
       border-right: none;
       margin-bottom: 30px;
+  }
+}
+
+@media(max-width:768px){
+  .aboutus p{
+    padding-top: 20px;
+    margin: auto;
+    text-align: justify;
   }
 }
