--- a/css/core.css
+++ b/css/core.css
@@ -243,7 +243,7 @@ li{
   text-align: right;
 }
 
-.emptyboutique{
+#emptyboutique{
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -308,7 +308,7 @@ li{
   padding-right: 20px;
 }
 
-.shopnav a{
+.shopnav .elements{
   text-decoration: none;
   color: black;
   display: inline-block;
@@ -316,7 +316,7 @@ li{
 }
 
 .aboutus{
-    padding-bottom: 50px;
+    padding-bottom: 25px;
 }
 
 .aboutus h1{
@@ -333,6 +333,10 @@ li{
   height: auto;
   vertical-align: middle;
   border-radius: 3px;
+}
+
+.categorie{
+  padding-top: 25px;
 }
 
 .unarticle{
@@ -371,27 +375,51 @@ li{
   margin-bottom: 20px;
 }
 
-.emptycontainerarticle{
+#emptycontainerarticle{
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 227px;
+  height: 232px;
 }
 
-.emptycontainerarticle img{
+#emptycontainerarticle img{
   width: 80px;
   height: 80px;
   transition: 0.2s;
 }
 
-.emptycontainerarticle img:hover{
+#emptycontainerarticle img:hover{
   width: 120px;
   height: 120px;
   transition: 0.2s;
 }
+
+.addsection{
+  height: 20px;
+  background-color: grey;
+}
+
+.addsection img{
+  position: relative;
+  z-index: 2;
+  margin-left: 40px;
+  width: 30px;
+  height: 30px;
+}
+
+.removesection{
+  float: left;
+}
+
+.removesection img{
+  margin-left: 40px;
+  width: 30px;
+  height: 30px;
+}
+
 /* ---------------------------- medias querys -------------------------- */
 
 @media (max-width: 576px) {
@@ -412,7 +440,7 @@ li{
     padding: 0px;
   }
 
-  .shopnav a{
+  .shopnav .elements{
     display: block;
     text-align: center;
   }
