Ajout de sécurités (il manquait des verification belong to users). Les suppressions dans la base de données suppriment maintenant aussi les images qui ne servent plus à rien. Ajout du changement d'images 'about us'.

--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,12 @@ header{
   padding: 10px;
 }
 
+#custom_header_logo{
+  width: 150px;
+  height: auto;
+  padding: 15px;
+}
+
 #headerlink{
   margin-left: 160px;
 }
