--- a/css/core.css
+++ b/css/core.css
@@ -327,13 +327,29 @@ li{
 }
 
 .aboutusimg{
-  display:block;
+  width: 100%;
+  height: auto;
+  /* display:block;
   margin: auto;
   max-width: 350px;
   width: 100%;
   height: auto;
-  vertical-align: middle;
-  border-radius: 3px;
+  border-radius: 3px; */
+}
+
+.aboutusimgcontainer{
+  max-width: 350px;
+  width: 100%;
+  height: auto;
+  max-height: 1000px;
+  margin: auto;
+  border-radius: 13px;
+  overflow: hidden;
+}
+
+.aboutustextcontainer{
+  width: 100%;
+  height: 100%;
 }
 
 .categorie{
