--- a/css/core.css
+++ b/css/core.css
@@ -1,10 +1,15 @@
 /* --------------------- common -------------------- */
 #pagecontent {
  margin-left : 50px;
- /* font-family: 'Lobster', cursive;
+ font-family: 'Lobster', cursive;
 font-family: 'Fjalla One', sans-serif;
 font-family: 'Pacifico', cursive;
-font-family: 'Quicksand', sans-serif; */
+font-family: 'Quicksand', sans-serif;
+}
+
+body{
+  font-weight: bold;
+  font-family: Quicksand;
 }
 
 .successmsg p{
@@ -75,7 +80,7 @@ li{
 
 /* -------------- pageacceuil ------------------*/
 .maintitle{
-  font-family: 'Lobster', cursive;
+  font-weight: bold;
   max-width: 960px;
   margin: auto;
   text-align: center;
@@ -88,7 +93,7 @@ li{
 }
 
 .containericonaccueuil:first-child{
-    border-right: 3px solid;
+    border-right: 2px solid;
 }
 
 .titlecreate{
@@ -276,7 +281,6 @@ li{
   position: sticky;
   top: 0;
   z-index: 1;
-  position: relative;
   overflow: hidden;
   height: 64px;
   transition: 0.5s;
@@ -374,7 +378,6 @@ li{
   background-color: #E8E8E8;
   border-radius: 20px;
   margin: auto;
-  margin-bottom: 50px;
   width: 200px;
 }
 
@@ -493,7 +496,19 @@ form.changepicturelink input{
   height: 30px;
 }
 
+#changeaboutustext{
+  width: 100%;
+}
 
+#changeaboutustext textarea{
+  width: 100%;
+}
+
+.linktoedititem{
+  display: block;
+  font-size: 14px;
+  text-align: center;
+}
 
 
 /* ---------------------------- medias querys -------------------------- */
