--- a/css/core.css
+++ b/css/core.css
@@ -360,6 +360,11 @@ li{
   padding-top: 25px;
 }
 
+.categorie h4{
+  padding-top: 64px;
+margin-top: -64px;
+}
+
 #addcategory{
   padding: 10px;
   border-radius: 10px;
@@ -610,7 +615,7 @@ form.changepicturelink input{
 }
 
 #moreinfossection{
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 50px;
 }
 
@@ -631,6 +636,29 @@ form.changepicturelink input{
 
 #editaddmoreinfos textarea{
   width: 100%;
+}
+
+#websitepreview{
+  border-style: solid;
+  border-width: 2px;
+  margin-right: -15px;
+  padding-right: 15px;
+  width: 100px;
+  position: fixed;
+  top: 240px;
+  right: 0px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+#websitepreview h5{
+  font-size: 15px;
+  text-decoration: none;
+}
+
+#websitepreview a{
+  color: black;
+  text-decoration: none;
 }
 
 /* ---------------------------- medias querys -------------------------- */
